--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-fluid"src="C:\Users\Neha.Mallikarjuna\Desktop\Udemy\Bootstrap4_Code\Bootstrap4_Code\13_Museum_Of_Candy\Starter\imgs\hand2.png" alt="">
+          <img class="img-fluid"src="imgs\hand2.png" alt="">
         </div>
       </div>
     </section>
